--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "Traine"
+    "liveServer.settings.multiRootWorkspaceName": "Traine",
+    "liveServer.settings.port": 5501
 }
